# thinkbox-xmesh

./: CMakeLists.txt  CONTRIBUTING.md  NOTICE.txt  README.md  THIRD-PARTY-LICENSES  build.py  conanfile.py  stdafx.cpp  stdafx.h
UnitTests/: CMakeLists.txt  gtest_main.cc  stdafx.cpp  stdafx.h
UnitTests/src/: test_cached_polymesh3_loader.cpp  test_xmesh_timing.cpp
src/xmesh/: cached_polymesh3_loader.cpp  xmesh_timing.cpp
xmesh/: cached_polymesh3_loader.hpp  fractional_index_iterator.hpp  xmesh_timing.hpp
